<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_instruction"
                    android:hint="@string/title" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/instr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/tasks"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:id="@+id/tasks_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/first_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_1"
                    android:inputType="textNoSuggestions" />

            </LinearLayout>

            <Button
                android:id="@+id/add_item_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@android:color/transparent"
                android:drawableStart="@drawable/plus_mark"
                android:drawableTint="@android:color/black"
                android:text="@string/add_item"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/add_checkboxes_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/add_checkbox" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#eeeeee"
        android:orientation="horizontal"
        android:padding="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/add_reminder_message" />

        <ImageView
            android:id="@+id/time_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/image_border"
            android:padding="8dp"
            app:srcCompat="@drawable/time_alarm" />

        <ImageView
            android:id="@+id/location_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/image_border"
            android:foregroundGravity="right"
            android:padding="8dp"
            app:srcCompat="@drawable/location_alarm" />

    </LinearLayout>
</RelativeLayout>