<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textNoSuggestions" />


    <LinearLayout
        android:id="@+id/tasks_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_edit_text"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" />

    </LinearLayout>


    <TextView
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasks_layout"
        android:layout_margin="4dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/plus_mark"
        android:text="@string/add_item" />


    <RadioButton
        android:id="@+id/add_checkboxes_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_button"
        android:text="@string/add_checkbox" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#eeeeee"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/add_reminder_message"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/time_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/time_alarm" />

        <ImageView
            android:id="@+id/location_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:foregroundGravity="right"
            android:padding="16dp"
            android:src="@drawable/location_alarm" />

    </LinearLayout>
</RelativeLayout>