<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/input_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_instruction" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tasks_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_rl"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_1"
            android:inputType="textNoSuggestions" />

    </LinearLayout>


    <TextView
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasks_layout"
        android:layout_margin="8dp"
        android:padding="4dp"
        android:drawablePadding="4dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/plus_mark"
        android:background="@drawable/background"
        android:gravity="center_vertical"
        android:text="@string/add_item" />


    <CheckBox
        android:id="@+id/add_checkboxes_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_item_button"
        android:text="@string/add_checkbox" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#eeeeee"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/add_reminder_message"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/time_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/image_border"
            android:src="@drawable/time_alarm" />

        <ImageView
            android:id="@+id/location_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:foregroundGravity="right"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/image_border"
            android:padding="8dp"
            android:src="@drawable/location_alarm" />

    </LinearLayout>
</RelativeLayout>